[gd_scene load_steps=5 format=3 uid="uid://codd0sfjcvg05"]

[ext_resource type="Script" uid="uid://crs777xecsrt4" path="res://scenes/UI/game_ui/player_interface.gd" id="1_x6a1n"]
[ext_resource type="PackedScene" uid="uid://dpmvcs1687nfx" path="res://scenes/UI/game_ui/player_controls.tscn" id="2_ltrbf"]
[ext_resource type="PackedScene" uid="uid://bsd8go50orsrn" path="res://scenes/UI/game_ui/level_ui/group_actions_panel.tscn" id="3_n7n0g"]
[ext_resource type="PackedScene" uid="uid://cv5njxs8al6tl" path="res://scenes/UI/resource_bar.tscn" id="4_n7n0g"]

[node name="PlayerInterface" type="Node" node_paths=PackedStringArray("resource_bar", "group_actions_panel", "player_controls")]
script = ExtResource("1_x6a1n")
resource_bar = NodePath("ResourceBar")
group_actions_panel = NodePath("GroupActionsPanel")
player_controls = NodePath("PlayerControls")
metadata/_edit_lock_ = true

[node name="PlayerControls" parent="." instance=ExtResource("2_ltrbf")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="ResourceBar" parent="." instance=ExtResource("4_n7n0g")]
unique_name_in_owner = true

[node name="GroupActionsPanel" parent="." instance=ExtResource("3_n7n0g")]
offset_left = -204.0
offset_top = -481.0
